--- a/src/template/list.hbs
+++ b/src/template/list.hbs
@@ -1,2 +1,2 @@
 
-    <li><img src={{src}} class={{class}} id={{id}} alt={{alt}}></li>
+    <img src={{src}} class="comp_card {{class}}" id={{id}} alt={{alt}}>
