--- a/src/sass/layers/_game.scss
+++ b/src/sass/layers/_game.scss
@@ -89,9 +89,15 @@ display: flex;
    display: flex;
 }
 
+.player_card_list{
+    height: 200px;
+}
+
 .card_item{
     padding: 3px;
     border: 4px solid white;
+    height: 200px;
+    min-width: 140px;
 }
 
 .card_item + .card_item{
