--- a/src/template/list.hbs
+++ b/src/template/list.hbs
@@ -1,2 +1,2 @@
 
-    <img src={{src}} class="comp_card {{class}}" id={{id}} alt={{alt}}>
+    <img src={{src}} class="comp_card is-none {{class}}" id={{id}} alt={{alt}}>
