--- a/src/sass/layers/_game.scss
+++ b/src/sass/layers/_game.scss
@@ -85,6 +85,14 @@ display: flex;
     
 }
 
+.hidden{
+    background-image: url('.././images/skin.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all .3s linear;
+}
+
 .card_list{
    display: flex;
 }
@@ -95,7 +103,7 @@ display: flex;
 
 .card_item{
     padding: 3px;
-    border: 4px solid white;
+  
     height: 200px;
     min-width: 140px;
 }
