--- a/src/sass/layers/_greeting-window.scss
+++ b/src/sass/layers/_greeting-window.scss
@@ -82,3 +82,53 @@
         box-shadow: 3px 4px 4px black;
     }
 }
+
+
+//final window
+.final_back{
+    z-index: 999;
+    position: fixed;
+
+    width: 100%;
+    height: 100vh;
+
+    top: 0%;
+    left: 0;
+
+    background-color: rgba(41, 41, 41, 0.9);
+
+    transition: all .35s linear;
+}
+
+.final_window{
+    width: 450px;
+    height: 300px;
+
+    border-radius: 50px;
+    box-shadow: 4px 4px 6px black;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+
+    background-image: url('.././images/start-bg.jpg');
+}
+
+.final_title{
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+    font-size: 64px;
+    line-height: 68px;
+    font-weight: 800;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+    color: rgb(255, 166, 0);
+    text-shadow: 4px 5px 4px black;
+}
