--- a/src/sass/components/_button-list.scss
+++ b/src/sass/components/_button-list.scss
@@ -29,3 +29,49 @@
         box-shadow: 2px 3px 4px black;
     }
 }
+
+.retry_btn{
+    padding-left: 16px;
+    padding-right: 16px;
+    align-self: center;
+    font-weight: 600;
+    font-family:'Ceviche One';
+    border-color: transparent;
+    border-radius: 16px;
+    background-color: rgb(224, 146, 0);
+    font-size: 32px;
+    transition: all .25s linear;
+
+    &:hover, &:focus{
+        cursor: pointer;
+        color: rgb(255, 0, 0);
+        background-color: rgb(255, 166, 0);
+        box-shadow: 2px 3px 4px black;
+    }
+}
+
+.exit_btn{
+    margin-top: 30px;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    align-self: center;
+    font-weight: 600;
+    font-family:'Ceviche One';
+    border-color: transparent;
+    border-radius: 16px;
+    background-color: rgb(224, 146, 0);
+    font-size: 32px;
+    transition: all .25s linear;
+
+    &:hover, &:focus{
+        cursor: pointer;
+        color: rgb(255, 0, 0);
+        background-color: rgb(255, 166, 0);
+        box-shadow: 2px 3px 4px black;
+    }
+}
+
