--- a/src/sass/layers/_game.scss
+++ b/src/sass/layers/_game.scss
@@ -115,7 +115,14 @@ display: flex;
 
 .player_nickName{
     position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    bottom: -100px;
+    left: 47%;
+    transform: translateX(-47%);
+    font-size: 76px;
+    line-height: 80px;
+    text-shadow: 3px 3px 5px red;
+    text-align: center;
+    font-family: 'Ceviche One';
+
+    border-bottom: 6px solid black;
 }
