--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -4,6 +4,10 @@ ul{
     margin: 0;
 }
 
+a{
+  text-decoration: none;
+}
+
 body{
     background-image: url('.././images/backgrounds/body-bg.jpg');
     margin: 0;
