--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 @import './components/titles';
 @import './components/button-list';
 //layers
-@import './layers/greeting-window';
+@import './layers/greet';
 @import './layers/game';
 @import './layers/rules-radio';
 //utils
