--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -31,14 +31,19 @@ h1,h2,h3,h4,h5,h6{
     margin-left: auto;
     margin-right: auto;
   
-    @media screen and (min-width: 320px) {
-      min-width: 320px;
-      max-width: 767px;
-    }
-    @media screen and (min-width: 768px) {
-      max-width: 768px;
-    }
-    @media screen and (min-width: 1280px) {
-      max-width: 1280px;
-    }
+    @media screen and (min-width:320px) {
+      width: 320px;
+      padding-left:10px;
+      padding-right: 10px;
+}
+
+@media screen and (min-width:768px) {
+      width: 768px;
+      padding-left: 15px;
+padding-right: 15px;
+}
+
+@media screen and (min-width:1200px) {
+      width: 1200px;
+}
   }
