--- a/src/sass/components/_titles.scss
+++ b/src/sass/components/_titles.scss
@@ -19,6 +19,14 @@
     &:hover{
         cursor: default;
     }
+
+    @media screen and (min-width:320px) {
+        display: none;
+    }
+    
+    @media screen and (min-width:768px) {
+        display: block;
+    }
 }
 
 .side_title{
@@ -39,5 +47,13 @@
 
     &:hover{
         cursor: default;
+    }
+
+    @media screen and (min-width:320px) {
+        display: none;
+    }
+    
+    @media screen and (min-width:768px) {
+        display: block;
     }
 }
