--- a/src/sass/layers/_game.scss
+++ b/src/sass/layers/_game.scss
@@ -2,7 +2,6 @@
 
 .game_field{
     z-index: 999;
-    margin-top: 50px;
     background-image: url('.././images/backgrounds/table-desktop.jpg');
  
     background-repeat: no-repeat;
@@ -10,18 +9,38 @@
 
 
     display: flex;
-    position: relative;
+    
 
     border-radius: 200px;
     border: 10px solid black;
 
     box-shadow: 0px 10px 15px black;
+
+
+    @media screen and (min-width:320px) {
+        margin-top: 10px;
+    }
+    
+    @media screen and (min-width:768px) {
+        margin-top: 50px;
+    }
 }
 
 .table{
    width: 100%; 
-display: flex;
-   padding: 20px 40px 20px;
+
+   @media screen and (min-width:320px) {
+    display: block;
+    padding: 2px 4px 2px;
+}
+
+@media screen and (min-width:568px) {
+    display: flex;
+}
+
+@media screen and (min-width:768px){
+    padding: 20px 40px 20px;
+}
 }
 
 .card_cover{
@@ -34,7 +53,16 @@ display: flex;
     display: block;
     margin-top: auto;
     margin-bottom: auto;
+
+    @media screen and (min-width:320px) {
+        display: flex;
+    }
+    
+    @media screen and (min-width:568px) {
+        display: block;
+    }
 }
+
 
 .point_span{
     font-size: 74px;
@@ -43,20 +71,52 @@ display: flex;
 }
 
 .point_item{
-    width: 100px;
-    height: 100px;
     border-radius: 50%;
-    border: 10px solid white;
+    
     background-color: rgba(255, 255, 255, 0.404);
 
     display: flex;
     justify-content: center;
     align-items: center;
 
+    @media screen and (min-width:320px) {
+        height: 44px;
+        width: 44px; 
+        padding: 25px;
+        border: 3px solid white;
+
+        font-size: 14px;
+font-weight: 600;
+
+        & + &{
+            margin-top: 0px;
+            margin-left: 30px;
+        }
+    }
+        @media screen and (min-width:568px) {
+            height: 60px;
+            width: 60px; 
+            border: 7px solid white;
+            font-size: 19px;
+    font-weight: 700;
 
     & + &{
         margin-top: 50px;
+        margin-left: 0;
     }
+        }
+    
+        @media screen and (min-width:1200px) {
+            height: 100px;
+            width: 100px; 
+    
+            border: 10px solid white;
+
+            font-size: 24px;
+    font-weight: 700;
+    }
+
+
 }
 
 .deck_cover{
@@ -68,32 +128,58 @@ display: flex;
 
     padding: 5px;
     border: 8px solid white;
+
+    @media screen and (min-width:320px) {
+        display: none;
+    }
+    
+    @media screen and (min-width:568px) {
+        display: block;
+    }
 }
 
 .deck{
     width: 180px;
     height: 270px;
+
+    
 }
 
 
 
 
 .card{
-    border-radius: 16px;
+    
     border: 4px solid black;
     box-shadow: 4px 4px 6px black;
 
-    width: 130px;
-    height: 190px;
+
+    @media screen and (min-width:320px) {
+        width: 70px;
+    height: 110px;
+    }
+    
+    @media screen and (min-width:768px) {
+        width: 130px;
+        height: 190px;
+    }
     
 }
 
 .hidden{
     background-image: url('.././images/skin.png');
-    background-size: contain;
+    
     background-repeat: no-repeat;
     background-position: center;
     transition: all .3s linear;
+
+    @media screen and (min-width:320px) {
+        background-size: 115px 175px;
+    }
+    
+    @media screen and (min-width:768px) {
+        background-size: 140px 200px;
+    }
 }
 
 .card_list{
@@ -106,13 +192,21 @@ display: flex;
 
 .card_item{
     padding: 3px;
-  
-    height: 200px;
-    min-width: 140px;
+ 
 }
 
 .card_item + .card_item{
-    margin-left: 70px;
+
+    @media screen and (min-width:320px) {
+        margin-left: 20px;
+    }
+    
+    @media screen and (min-width:768px) {
+        margin-left: 400px;
+    }
+    @media screen and (min-width:1000px) {
+        margin-left: 70px;
+    }
 }
 
 
