--- a/src/sass/layers/_game.scss
+++ b/src/sass/layers/_game.scss
@@ -2,27 +2,34 @@
 
 .game_field{
     z-index: 999;
-    background-image: url('.././images/backgrounds/table-desktop.jpg');
- 
-    background-repeat: no-repeat;
-    background-position: center;
-
-
+   
     display: flex;
     
-
-    border-radius: 200px;
-    border: 10px solid black;
-
-    box-shadow: 0px 10px 15px black;
-
-
     @media screen and (min-width:320px) {
-        margin-top: 10px;
+        margin-top: 0;
+       position: absolute;
+       top: 50%;
+       left: 50%;
+       transform: translate(-50%, -50%);
+    }
+
+    @media screen and (orientation: landscape){
+      
     }
     
     @media screen and (min-width:768px) {
-        margin-top: 50px;
+        margin-top: 10px;
+    }
+
+    @media screen and (min-width:1000px){
+        background-image: url('.././images/backgrounds/table-desktop.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+
+        border-radius: 200px;
+        border: 10px solid black;
+    
+        box-shadow: 0px 10px 15px black;
     }
 }
 
@@ -33,9 +40,14 @@
     display: block;
     padding: 2px 4px 2px;
 }
-
-@media screen and (min-width:568px) {
+@media screen and (orientation:landscape){
     display: flex;
+    align-items: center;
+}
+
+@media screen and (min-width:768px) {
+    display: flex;
+
 }
 
 @media screen and (min-width:768px){
@@ -44,28 +56,59 @@
 }
 
 .card_cover{
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+    
+    @media screen and (min-width:320px) {
+        display: block;
+        padding: 2px 4px 2px;
+    }
+     
+    @media screen and (min-width:768px){
+        padding: 20px 40px 20px;
+        display: block;
+    margin-right: 50px;
+    margin-left: 50px;
+    }
 }
 
 .point_list{
-    display: block;
-    margin-top: auto;
-    margin-bottom: auto;
-
     @media screen and (min-width:320px) {
         display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    @media screen and (orientation:landscape){
+        display: block;
+        margin-top: auto;
+        margin-bottom: auto;
     }
     
-    @media screen and (min-width:568px) {
+    @media screen and (min-width:768px) {
         display: block;
+        margin-top: auto;
+    margin-bottom: auto;
+    }
+}
+
+.point_name{
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: -25px;
+    font-family: 'Ceviche One';
+    font-size: 24px;
+  
+    @media screen and (min-width:320px) {
+        display: block;
+        
+    }
+    
+    @media screen and (min-width:768px) {
+        display: none;
     }
 }
 
 
 .point_span{
-    font-size: 74px;
     text-align: center;
     font-family: 'Ceviche One';
 }
@@ -80,20 +123,26 @@
     align-items: center;
 
     @media screen and (min-width:320px) {
-        height: 44px;
-        width: 44px; 
-        padding: 25px;
+        height: 24px;
+        width: 24px; 
+        padding: 5px;
         border: 3px solid white;
 
         font-size: 14px;
-font-weight: 600;
 
         & + &{
             margin-top: 0px;
             margin-left: 30px;
         }
     }
-        @media screen and (min-width:568px) {
+
+    @media screen  and (orientation:landscape){
+        & + &{
+            margin-top: 30px;
+            margin-left: 0px;
+        }
+    }
+        @media screen and (min-width:768px) {
             height: 60px;
             width: 60px; 
             border: 7px solid white;
@@ -112,7 +161,7 @@ font-weight: 600;
     
             border: 10px solid white;
 
-            font-size: 24px;
+            font-size: 64px;
     font-weight: 700;
     }
 
@@ -133,7 +182,7 @@ font-weight: 600;
         display: none;
     }
     
-    @media screen and (min-width:568px) {
+    @media screen and (min-width:1000px) {
         display: block;
     }
 }
@@ -174,7 +223,7 @@ font-weight: 600;
     transition: all .3s linear;
 
     @media screen and (min-width:320px) {
-        background-size: 115px 175px;
+        background-size: 80px 115px;
     }
     
     @media screen and (min-width:768px) {
@@ -184,15 +233,36 @@ font-weight: 600;
 
 .card_list{
    display: flex;
+   @media screen and (min-width:320px) {
+    height: 150px;
+}
+
+@media screen and (min-width:768px) {
+    height: 200px;
+}
 }
 
 .player_card_list{
     height: 200px;
+
+    @media screen and (orientation:landscape) {
+        height: 120px;
+    }
+    @media screen and (min-width:768px) {
+        height: 200px;
+    }
 }
 
 .card_item{
     padding: 3px;
- 
+    
+    @media screen and (min-width:320px) {
+        min-width: 80px;
+    }
+    
+    @media screen and (min-width:768px) {
+        min-width: 140px;
+    }
 }
 
 .card_item + .card_item{
@@ -202,7 +272,7 @@ font-weight: 600;
     }
     
     @media screen and (min-width:768px) {
-        margin-left: 400px;
+        margin-left: 40px;
     }
     @media screen and (min-width:1000px) {
         margin-left: 70px;
@@ -211,8 +281,16 @@ font-weight: 600;
 
 
 .player_nickName{
-    position: absolute;
-    bottom: -100px;
+   
+    @media screen and (min-width:320px) {
+        display: none;
+    }
+    
+    @media screen and (min-width:768px) {
+        text-align: center;
+        display: block;
+        position: absolute;
+    bottom: 20px;
     left: 47%;
     transform: translateX(-47%);
     font-size: 76px;
@@ -222,4 +300,5 @@ font-weight: 600;
     font-family: 'Ceviche One';
 
     border-bottom: 6px solid black;
+    }
 }
