--- a/src/sass/layers/_greet.scss
+++ b/src/sass/layers/_greet.scss
@@ -12,30 +12,34 @@
 }
 
 .start_window{
+    border-radius: 50px;
+    box-shadow: 4px 4px 6px black;
+
     position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 320px;
+    transform: translate(-50%,-50%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 40px;
+
+    background-image: url('.././images/start-bg.jpg');
+
+    @media screen and (min-width:320px) {
+        padding: 30px;
+        width: 90%;
+        height: auto;
+    }
+    @media screen and (min-width:768px) {
+        padding: 40px;
+        width: 450px;
+    }
     
-    transform: translate(-50%, -50%) scale(1);
-background-image: url('.././images/start-bg.jpg');
-border-radius: 26px;
-box-shadow: 3px 3px 6px var(--box-shadow);
-
-@media screen and (min-width:320px) {
-    padding: 30px;
-    width: 90%;
-    height: auto;
-}
-@media screen and (min-width:768px) {
-    padding: 40px;
-    width: 450px;
-}
-
-@media screen and (min-width:1200px) {
-    width: 540px;
-}
+    @media screen and (min-width:1200px) {
+        width: 540px;
+    }
 }
 
 .start_title{
@@ -77,6 +81,10 @@ box-shadow: 3px 3px 6px var(--box-shadow);
     @media screen and (min-width:320px) {
         font-size: 40px;
         line-height: 46px;
+        width: 280px;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
     }
    
 }
@@ -152,14 +160,35 @@ box-shadow: 3px 3px 6px var(--box-shadow);
 }
 
 .final_title{
-    margin-top: 30px;
-    margin-bottom: 30px;
-
-    font-size: 64px;
-    line-height: 68px;
-    font-weight: 800;
+    
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
     color: rgb(255, 166, 0);
     text-shadow: 4px 5px 4px black;
+
+    @media screen and (min-width:320px) {
+        margin-top: 10px;
+    margin-bottom: 10px;
+
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 600;
+    }
+    @media screen and (min-width:768px) {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    
+        font-size: 44px;
+        line-height: 48px;
+        font-weight: 700;
+    }
+    
+    @media screen and (min-width:1200px) {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    
+        font-size: 64px;
+        line-height: 68px;
+        font-weight: 800;
+    }
 }
