--- a/src/sass/layers/_game.scss
+++ b/src/sass/layers/_game.scss
@@ -11,14 +11,25 @@
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
+       background-image: url('.././images/backgrounds/mobile-bg.jpg');
+       background-size: 320px 568px;
+       background-repeat: no-repeat;
+       background-position: center;
+       border-radius: 40px;
+       border:4px solid black;
+
     }
 
     @media screen and (orientation: landscape){
-      
+        background-image: url('.././images/backgrounds/land-bg.jpg');
+        background-size:  568px 320px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     
     @media screen and (min-width:768px) {
         margin-top: 10px;
+        background-size: cover;
     }
 
     @media screen and (min-width:1000px){
@@ -199,18 +210,20 @@
 
 .card{
     
-    border: 4px solid black;
+    
     box-shadow: 4px 4px 6px black;
 
 
     @media screen and (min-width:320px) {
         width: 70px;
     height: 110px;
+    border: 3px solid black;
     }
     
     @media screen and (min-width:768px) {
         width: 130px;
         height: 190px;
+        border: 4px solid black;
     }
     
 }
