--- a/src/sass/layers/_rules-radio.scss
+++ b/src/sass/layers/_rules-radio.scss
@@ -150,3 +150,103 @@
         padding: 20px;
     }
 }
+
+.audio_cover{
+    position: fixed;
+    z-index: 999;
+
+    @media screen and (min-width:320px) {
+        left: 5px;
+    bottom: 5px;
+    font-size: 14px;
+    }
+    @media screen and (min-width:768px) {
+        left: 10px;
+    bottom: 10px;
+
+    }
+    
+    @media screen and (min-width:1200px) {
+        bottom: 15px;
+    left: 15px;
+    }
+}
+
+.audio_player{
+   
+
+    padding:2px;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: rgb(128, 77, 0);
+
+   
+
+}
+
+.audio_control_list{
+    display: flex;
+}
+
+.audio_control_item + .audio_control_item{
+    margin-left: 5px;
+}
+
+.audio_btn{
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    background-color: rgb(224, 146, 0);
+    transition: all .25s linear;
+
+    &:hover, &:focus{
+        cursor: pointer;
+        fill: red;
+        box-shadow: 1px 1px 4px black;
+        background-color: rgb(255, 171, 14);
+    }
+
+    @media screen and (min-width:320px) {
+        width: 26px;
+        height: 26px;
+    }
+    @media screen and (min-width:768px) {
+        width: 36px;
+        height: 36px;
+    }
+    
+    @media screen and (min-width:1200px) {
+        width: 46px;
+        height: 46px;
+    }
+}
+
+.cntrl_icon{
+    @media screen and (min-width:320px) {
+        width: 8px;
+        height: 8px;
+    }
+    @media screen and (min-width:768px) {
+        width: 16px;
+        height: 16px;
+    }
+    
+    @media screen and (min-width:1200px) {
+        width: 26px;
+        height: 26px;
+    }
+}
+
+
+
+.progres{
+    z-index: 999;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: rgb(255, 171, 14);
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
